# cloudstate-cli

./: .gitignore  .travis.bkp  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build-release.sh
ci/: before_deploy.sh  install.sh  script.sh  utils.sh
cloudstate/: Cargo.toml  Dockerfile  build-release.sh
cloudstate-cli/: README.md  pom.xml
cloudstate-cli/src/main/docker/: Dockerfile.fast-jar  Dockerfile.jvm  Dockerfile.native
cloudstate-cli/src/main/java/io/cloudstate/cli/: CloudStateVersionProvider.java  KubernetesClientProducer.java  ProjectConfiguration.java  VersionProvider.java
cloudstate-cli/src/main/java/io/cloudstate/cli/commands/: CloudStateCommand.java  CreateCommand.java  InitCommand.java  LogCommand.java  RunCommand.java  ScaleCommand.java
cloudstate-cli/src/main/java/io/cloudstate/cli/configuration/: CloudStateSetup.java  DockerSetup.java  Language.java  OperatorImplementation.java  ProjectConfiguration.java  ProjectConfigurationStore.java  ProxyImplementation.java  RegistrySetup.java
cloudstate-cli/src/main/java/io/cloudstate/cli/produces/: DockerClientProducer.java  KubernetesClientProducer.java
cloudstate-cli/src/main/resources/: application.properties  git.properties  resources-config.json
cloudstate-cli/src/test/java/io/cloudstate/cli/configuration/: ProjectConfigurationStoreTest.java
cloudstate/src/: builders.rs  cli.yml  commands.rs  config.rs  helpers.rs  lib.rs  main.rs  matches.rs  routes.rs  server.rs
cloudstate/src/builders/: csharp.rs  dotnet.rs  go.rs  java.rs  mod.rs  node.rs  python.rs  rust.rs  scala.rs
cloudstate/src/handlers/: mod.rs
deployments/: stack-template.yml  stack.yml
examples/: README.md
examples/dotnet/: README.md
examples/java/: README.md
examples/node/: README.md
examples/rust/: README.md
shopping-cart/: Cargo.toml  Dockerfile
shopping-cart/config/: log4rs.yml
shopping-cart/src/: main.rs
