[package]
name = "cloudstate"
version = "0.1.1"
description = "CloudState CLI"
keywords = [
    "serverless",
    "cloudstate",
    "event-sourcing",
    "crdt"
  ]
homepage = "https://cloudstate.io/"
documentation = "https://cloudstate.io/docs/"
authors = ["Adriano Santos <sleipnir@bsd.com.br>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap               = { version = "2.33.0", features = ["yaml"] }
git2               = "0.10"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.41"
serde_yaml         = "0.8"
cargo-toml-builder = "0.3.0"
whoami             = "0.5.3"
dirs               = "2.0"
flate2             = "1.0.12"
tar                = "0.4.26"
throw              = "0.1.7"