[package]
name = "cloudstate"
version = "0.5.6"
description = "CloudState CLI"
keywords = [
    "serverless",
    "cloudstate",
    "event-sourcing",
    "crdt"
  ]
homepage = "https://cloudstate.io/"
documentation = "https://cloudstate.io/docs/"
authors = ["Adriano Santos <sleipnir@bsd.com.br>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[target.x86_64-apple-darwin]
#linker = "x86_64-apple-darwin14-clang"
#ar     = "x86_64-apple-darwin14-ar"

[dependencies]
cargo-toml-builder = "0.3.0"
clap               = { version = "2.33.0", features = ["yaml", "wrap_help"] }
dirs               = "2.0"
flate2             = "1.0.12"
git2               = "0.10"
Inflector          = "0.11.4"
linked-hash-map    = "0.5.2"
listenfd           = "0.3"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.41"
serde_yaml         = "0.8"
self_update        = "0.8.0"
tar                = "0.4.26"
whoami             = "0.5.3"

[dev-dependencies]
